feat : change theme color, change categories

--- a/public/assets/ecommerce/css/about.css
+++ b/public/assets/ecommerce/css/about.css
@@ -88,7 +88,7 @@
 .box_feat i {
   font-size: 52px;
   font-size: 3.25rem;
-  color: #004dda;
+  color: #DD710E;
   margin-bottom: 10px;
   display: inline-block;
 }
