--- a/public/assets/ecommerce/css/blog.css
+++ b/public/assets/ecommerce/css/blog.css
@@ -113,7 +113,7 @@ article.blog .post_info h2 a {
   color: #333;
 }
 article.blog .post_info h2 a:hover {
-  color: #004dda;
+  color: #DD710E;
 }
 article.blog .post_info ul {
   margin: 0 -30px 0 -30px;
@@ -216,7 +216,7 @@ article.blog .post_info ul li:last-child i {
   color: #555;
 }
 .comments-list h3 a:hover {
-  color: #004dda;
+  color: #DD710E;
 }
 .comments-list li {
   margin-bottom: 10px;
@@ -261,7 +261,7 @@ article.blog .post_info ul li:last-child i {
   color: #555;
 }
 .widget ul.cats a:hover {
-  color: #004dda;
+  color: #DD710E;
 }
 .widget ul.cats a span {
   position: absolute;
@@ -282,7 +282,7 @@ article.blog .post_info ul li:last-child i {
   color: #333;
 }
 .tags a:hover {
-  background-color: #004dda;
+  background-color: #DD710E;
   color: #fff;
 }
 
@@ -301,7 +301,7 @@ article.blog .post_info ul li:last-child i {
   right: 0;
 }
 .search_blog .form-group button[type="submit"]:hover {
-  color: #004dda;
+  color: #DD710E;
 }
 
 /*Blog Post*/
@@ -354,7 +354,7 @@ article.blog .post_info ul li:last-child i {
   color: #777;
 }
 .postmeta ul li a:hover {
-  color: #004dda;
+  color: #DD710E;
 }
 .postmeta ul li a i {
   margin-right: 3px;
@@ -362,7 +362,7 @@ article.blog .post_info ul li:last-child i {
 
 .dropcaps p:first-child::first-letter {
   color: #fff;
-  background-color: #004dda;
+  background-color: #DD710E;
   float: left;
   font-size: 64px;
   font-size: 4rem;
