--- a/public/assets/ecommerce/css/checkout.css
+++ b/public/assets/ecommerce/css/checkout.css
@@ -40,8 +40,8 @@
 
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
-  border-bottom: 2px solid #004dda;
-  color: #004dda;
+  border-bottom: 2px solid #DD710E;
+  color: #DD710E;
   background-color: transparent;
 }
 
@@ -146,7 +146,7 @@
   color: #444;
 }
 .payments ul li a.info:hover, .shipping ul li a.info:hover {
-  color: #004dda;
+  color: #DD710E;
 }
 .payments ul li a.info:after, .shipping ul li a.info:after {
   font-family: 'themify';
