--- a/public/assets/ecommerce/css/leave_review.css
+++ b/public/assets/ecommerce/css/leave_review.css
@@ -59,7 +59,7 @@ input[type=file]::-webkit-file-upload-button, input[type=file].invalid::-webkit-
   border: 0;
   border-radius: 3px;
   padding: 8px 10px 8px 38px;
-  background: #004dda url(../img/camera.svg) 8px center no-repeat;
+  background: #DD710E url(../img/camera.svg) 8px center no-repeat;
   outline: none;
 }
 
