--- a/public/assets/ecommerce/sass/_variables.scss
+++ b/public/assets/ecommerce/sass/_variables.scss
@@ -4,7 +4,7 @@ $body-text-color:               #444;
 $body-text-color-2:             #637381;
 $heading-color:                 #111;
 
-$color-1: 						#004dda;
+$color-1: 						#DD710E;
 $color-2: 						#083487;
 $color-3: 						#32a067;
 $color-4: 						#0e62ff;
