refactor: remove cart dropdown, remove track your order and your order

--- a/public/assets/ecommerce/css/style.css
+++ b/public/assets/ecommerce/css/style.css
@@ -2198,6 +2198,9 @@ header ul.top_tools > li a.btn_cat_mob .hamburger-box {
 header ul.top_tools > li a.wishlist:before {
   content: '\0041';
 }
+header ul.top_tools > li a.my_cart:before {
+  content: '\0042';
+}
 header ul.top_tools > li a.access_link:before {
   content: '\0043';
 }
