--- a/public/assets/ecommerce/sass/style.scss
+++ b/public/assets/ecommerce/sass/style.scss
@@ -2136,6 +2136,12 @@ header {
                     }
                 }
 
+                &.my_cart {
+                  &:before {
+                      content: '\0042';
+                  }
+              }
+
                 &.access_link {
                     &:before {
                         content: '\0043';
