--- a/public/assets/ecommerce/css/custom.css
+++ b/public/assets/ecommerce/css/custom.css
@@ -141,3 +141,21 @@ a.badge:hover, a.badge:focus {
 .payment-method-list .payment-item-name{
   display:table-cell; vertical-align:middle;
 }
+
+.color_box{
+  content: '';
+  display: inline-block ;
+  width: 23px !important;
+  height: 23px !important;
+  border-radius: 50%;
+  margin-top: .5rem;
+  /* background: red; */
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  transition:all 0.3s ease;
+}
+.color_box:hover{
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
