[Update] Product wishlist process

--- a/public/assets/ecommerce/css/custom.css
+++ b/public/assets/ecommerce/css/custom.css
@@ -170,3 +170,7 @@ a.badge:hover, a.badge:focus {
   transform: scale(1.3);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
+.color-primary{
+  color: #DD710E;
+}
