--- a/public/assets/admin/scss/_variables.scss
+++ b/public/assets/admin/scss/_variables.scss
@@ -15,7 +15,7 @@ $red:                       #de4436 !default;
 $orange:                    #fa8c16 !default;
 $gold:                      #ffc107 !default;
 $green:                     #52c41a !default;
-$blue:                      #3f87f5 !default; 
+$blue:                      #DD710E !default; 
 $cyan:                      #00c9a7 !default;
 $purple:                    #886cff  !default; 
 $magenta:                   #eb2f96 !default;
