--- a/public/assets/ecommerce/css/custom.css
+++ b/public/assets/ecommerce/css/custom.css
@@ -182,3 +182,24 @@ a.badge:hover, a.badge:focus {
   background: #d63031;
   color: #FFF;
 }
+.image-thumbnail{
+  content: '';
+  width: 100%;
+  height: 30px;
+  background: red;
+  background-position: center !important;
+  background-size:cover !important;
+  background-repeat: no-repeat !important;
+
+}
+.image-thumbnail::before{
+  content: '';
+  position:absolute; top:0;right:0;bottom:0;left:0;
+  background:inherit;
+  transition:inherit;
+  transition: all .8s;
+}
+
+.image-thumbnail:hover::before{
+  transform: scale(1.15);
+}
