--- a/public/assets/ecommerce/css/cart.css
+++ b/public/assets/ecommerce/css/cart.css
@@ -16,15 +16,18 @@
 }
 
 .table.cart-list th:nth-child(1) {
-  width: 70%;
+  width: 5%;
 }
 .table.cart-list th:nth-child(2) {
-  width: 15%;
+  width: 70%;
 }
 .table.cart-list th:nth-child(3) {
-  width: 20%;
+  width: 15%;
 }
 .table.cart-list th:nth-child(4) {
+  width: 20%;
+}
+.table.cart-list th:nth-child(5) {
   width: 5%;
 }
 
@@ -100,23 +103,26 @@
   }
 
   .table.cart-list td:nth-of-type(1):before {
+    content: "";
+  }
+  .table.cart-list td:nth-of-type(2):before {
     content: "Product";
   }
 
-  .table.cart-list td:nth-of-type(2):before {
+  .table.cart-list td:nth-of-type(3):before {
     content: "Price";
   }
 
-  .table.cart-list td:nth-of-type(3):before {
+  .table.cart-list td:nth-of-type(4):before {
     content: "Quantity";
   }
 
-  .table.cart-list td:nth-of-type(4):before {
+  .table.cart-list td:nth-of-type(5):before {
     content: "Subtotal";
   }
 
-  .table.cart-list td:nth-of-type(5):before {
-    content: "Edit";
+  .table.cart-list td:nth-of-type(6):before {
+    content: "";
   }
 }
 .thumb_cart {
